--- a/src/statics/config/app.config.json
+++ b/src/statics/config/app.config.json
@@ -7,8 +7,8 @@
             "precision": 4
         },
         "social":{
-            "github": "https://github.com/CRONEOS",
-            "telegram": "https://t.me/croneos"
+            "github": "https://github.com/Daclify",
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://api.daclify.com"
@@ -22,8 +22,8 @@
             "precision": 4
         },
         "social":{
-            "github": "https://github.com/CRONEOS",
-            "telegram": "https://t.me/croneos"
+            "github": "https://github.com/Daclify",
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://api.daclify.com"
