--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
     "axios": "^0.18.1",
     "crypto-js": "^3.1.9-1",
     "deep-diff": "^1.0.2",
+    "eosjs": "^21.0.2",
+    "eosjs-ecc": "^4.0.7",
     "file-saver": "^2.0.2",
     "firebase": "6.6.2",
     "highlightjs": "^9.12.0",
     "json-pretty-html": "^1.1.6",
     "quasar": "^1.12.5",
-    "ual-anchor": "^0.4.1",
-    "ual-eosio-reference-authenticator": "^0.1.2",
-    "ual-ledger": "^0.1.2",
+    "ual-anchor": "^0.5.0",
+    "ual-eosio-reference-authenticator": "^0.3.0",
+    "ual-ledger": "^0.3.0",
     "ual-lynx": "^0.2.1",
-    "ual-scatter": "^0.1.5",
-    "ual-token-pocket": "^0.1.1",
-    "universal-authenticator-library": "^0.1.2",
+    "ual-scatter": "^0.3.0",
+    "ual-token-pocket": "^0.3.0",
+    "universal-authenticator-library": "^0.3.0",
     "vconsole": "^3.3.4",
     "vue-clipboard2": "^0.3.1",
     "vue-code-highlight": "^0.7.2",
