--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "daclify",
   "version": "0.0.1",
   "description": "Manage eosio accounts in group and serve your community as a DAC.",
-  "productName": "Daclify",
+  "productName": "Daclify by Animus",
   "cordovaId": "org.cordova.quasar.app",
   "author": "",
   "private": true,
