--- a/src/statics/config/app.config.json
+++ b/src/statics/config/app.config.json
@@ -1,4 +1,19 @@
 {
+    "telos":{
+        "groups_contract": "dacs.master",
+        "system_token": {
+            "contract": "eosio.token",
+            "symbol": "TLOS",
+            "precision": 4
+        },
+        "social":{
+            "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
+            "telegram": "https://t.me/Boidcom_official"
+        },
+        "api":{
+            "url": "https://telos.api.animus.is"
+        }
+    },
     "jungle":{
         "groups_contract": "daclifyhub11",
         "system_token": {
