--- a/src/statics/config/app.config.json
+++ b/src/statics/config/app.config.json
@@ -44,6 +44,21 @@
             "url": "https://api.daclify.com"
         }
     },
+    "wax":{
+        "groups_contract": "daclifyhub11",
+        "system_token": {
+            "contract": "eosio.token",
+            "symbol": "WAX",
+            "precision": 8
+        },
+        "social":{
+            "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
+            "telegram": "https://t.me/Boidcom_official"
+        },
+        "api":{
+            "url": "https://wax.eosn.io"
+        }
+    },
     "mainnet":{
         "groups_contract": "daclifyhub11",
         "system_token": {
