--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@eosdacio/ual-wax": "^1.5.1",
     "@jafri/eosjs2": "^21.0.0-rc.15",
     "@quasar/extras": "^1.8.2",
     "axios": "^0.21.1",
-    "@babel/core": "^7.0.0",
     "crypto-js": "^3.1.9-1",
     "deep-diff": "^1.0.2",
     "eosjs": "^21.0.2",
@@ -33,12 +34,12 @@
     "ual-token-pocket": "^0.3.0",
     "universal-authenticator-library": "^0.3.0",
     "vconsole": "^3.3.4",
-    "vuex": "^2.5.0",
     "vue-clipboard2": "^0.3.1",
     "vue-code-highlight": "^0.7.2",
     "vue-highlightjs": "^1.3.3",
     "vue-i18n": "^8.0.0",
     "vuedraggable": "^2.23.2",
+    "vuex": "^2.5.0",
     "vuex-persistedstate": "^2.5.4",
     "webpack": ">=2"
   },
