--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build:pwa": "quasar build -m pwa"
   },
   "dependencies": {
-    "@babel/core": "7.0.0",
+    "@babel/core": "7.17.8",
     "@eosdacio/ual-wax": "1.5.1",
-    "@jafri/eosjs2": "21.0.0-rc.15",
-    "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
+    "@jafri/eosjs2": "21.0.0-rc.17",
+    "@quasar/extras": "1.13.4",
+    "axios": "^0.26.1",
+    "core-js": "3.21.1",
     "crypto-js": "3.1.9-1",
     "deep-diff": "1.0.2",
     "eosjs": "21.0.2",
@@ -26,22 +26,25 @@
     "highlightjs": "9.12.0",
     "json-pretty-html": "1.1.6",
     "mitt": "^3.0.0",
-    "quasar": "^2.0.0",
+    "quasar": "2.6.2",
+    "ual-scatter": "0.3.0",
     "ual-anchor": "^1.1.2",
     "ual-eosio-reference-authenticator": "0.3.0",
     "ual-ledger": "0.3.0",
     "ual-lynx": "^0.4.0",
-    "ual-scatter": "0.3.0",
     "ual-token-pocket": "0.3.0",
     "universal-authenticator-library": "0.3.0",
     "vconsole": "3.3.4",
+    "vue": "^3.2.29",
     "vue-clipboard3": "^1.0.1",
     "vue-code-highlight": "0.7.8",
     "vue-highlightjs": "1.3.3",
     "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0",
     "vuedraggable": "4.1.0",
     "vuex": "^4.0.1",
-    "vuex-persistedstate": "4"
+    "vuex-persistedstate": "4",
+    "webpack": ">=5"
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0",
