--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
   },
   "dependencies": {
     "@babel/core": "7.17.8",
-    "@eosdacio/ual-wax": "1.5.1",
-    "@jafri/eosjs2": "21.0.0-rc.17",
-    "@quasar/extras": "1.13.4",
+    "@eosdacio/ual-wax": "^1.5.1",
+    "@jafri/eosjs2": "^21.0.0-rc.17",
+    "@quasar/extras": "^1.13.5",
+    "@smontero/ual-sqrl": "^0.1.23",
     "axios": "^0.26.1",
     "core-js": "3.21.1",
     "crypto-js": "3.1.9-1",
     "deep-diff": "1.0.2",
-    "eosjs": "21.0.2",
-    "eosjs-ecc": "4.0.7",
+    "eosjs": "^22.1.0",
+    "eosjs-ecc": "^4.0.7",
     "file-saver": "2.0.2",
     "firebase": "8.0.0",
     "highlightjs": "9.12.0",
     "json-pretty-html": "1.1.6",
     "mitt": "^3.0.0",
-    "quasar": "2.6.2",
-    "ual-scatter": "0.3.0",
-    "ual-anchor": "^1.1.2",
-    "ual-eosio-reference-authenticator": "0.3.0",
-    "ual-ledger": "0.3.0",
+    "quasar": "^2.6.4",
+    "ual-anchor": "^1.1.5",
+    "ual-eosio-reference-authenticator": "^0.3.0",
+    "ual-ledger": "^0.3.0",
     "ual-lynx": "^0.4.0",
-    "ual-token-pocket": "0.3.0",
-    "universal-authenticator-library": "0.3.0",
+    "ual-scatter": "0.3.0",
+    "ual-token-pocket": "^0.3.0",
+    "ual-wombat": "^0.3.3",
+    "universal-authenticator-library": "^0.3.0",
     "vconsole": "3.3.4",
-    "vue": "^3.2.29",
+    "vue": "^3.2.31",
     "vue-clipboard3": "^1.0.1",
     "vue-code-highlight": "0.7.8",
     "vue-highlightjs": "1.3.3",
@@ -47,7 +49,7 @@
     "webpack": ">=5"
   },
   "devDependencies": {
-    "@quasar/app": "^3.0.0",
+    "@quasar/app": "^3.3.3",
     "@quasar/quasar-app-extension-qmarkdown": "2.0.0-alpha.8",
     "babel-loader": "8.0.6",
     "copy-webpack-plugin": "5.0.2",
