added new logo and api endpoints change

--- a/src/statics/config/app.config.json
+++ b/src/statics/config/app.config.json
@@ -8,7 +8,7 @@
         },
         "social":{
             "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
-            "telegram": "https://t.me/Boidcom_official"
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://telos.api.animus.is"
@@ -23,7 +23,7 @@
         },
         "social":{
             "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
-            "telegram": "https://t.me/Boidcom_official"
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://api.testnet.telosunlimited.io"
@@ -38,7 +38,7 @@
         },
         "social":{
             "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
-            "telegram": "https://t.me/Boidcom_official"
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://jungle.eosn.io"
@@ -53,7 +53,7 @@
         },
         "social":{
             "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
-            "telegram": "https://t.me/Boidcom_official"
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://wax.eosn.io"
@@ -68,7 +68,7 @@
         },
         "social":{
             "github": "https://github.com/Animus-Labs-Ltd/daclifyfrontend",
-            "telegram": "https://t.me/Boidcom_official"
+            "telegram": "https://t.me/daclify"
         },
         "api":{
             "url": "https://eos.api.animus.is"
